--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -23,6 +23,7 @@
                             <a class="dropdown-item" routerLink="/driving-test">Driving Theory Test</a>
                             <a class="dropdown-item" routerLink="/power">Power Chart</a>
                             <a class="dropdown-item" routerLink="/practice">Practice Math</a>
+                            <a class="dropdown-item" routerLink="/workout">Workout Checklist</a>
                         </div>
                     
                 </li>
