--- a/src/app/test/test.component.html
+++ b/src/app/test/test.component.html
@@ -16,12 +16,12 @@
                 </div>
                 <div class="card-text col-2">
                     <h3>
-                        <input class="rounded border-primary text-danger" type="text" name="answer" [(ngModel)]="answer" autofocus [focus]="inputFocus" />
+                        <input class="rounded border-primary text-danger" type="text" name="answer" [(ngModel)]="answer" autofocus [myFocus]="inputFocus" />
                     </h3>
                 </div>
                 <div class="col-12 mt-4">
                     <button *ngIf="!answered" class="btn btn-primary" (click)="checkAnswer(answer)">提交</button>
-                    <button *ngIf="answered" class="btn btn-primary" (click)="raiseQuestion()"[focus]="buttonFocus" >下一题</button>
+                    <button *ngIf="answered" class="btn btn-primary" (click)="raiseQuestion()" [myFocus]="buttonFocus" >下一题</button>
                 </div>
             </div>
         <div class="card-footer">
