improve workout component with ng2-charts

--- a/src/app/index/index.component.html
+++ b/src/app/index/index.component.html
@@ -67,7 +67,7 @@
         </div>
         <div class="col-12 my-3">
             <div class="media">
-                <img src="assets/target.jpg" class="d-flex mr-3 img-thumbnail align-self-center" width="200px" height="200px">
+                <img src="assets/index/target.jpg" class="d-flex mr-3 img-thumbnail align-self-center" width="200px" height="200px">
                 <div class="media-body">
                     <p class="mt-5">Target oriented learning plans, specially customized for you.</p>
                 </div>
