--- a/src/app/workout/workout.component.html
+++ b/src/app/workout/workout.component.html
@@ -1,19 +1,18 @@
 <div class="container text-center my-5">
     <h3>My Workout</h3>
     <div *ngIf="workout" class="row my-5">
-        <table class="table table-striped table-bordered table-hover table-sm col-11">
+        <table class="table table-striped table-bordered table-hover table-sm col-12">
             <caption class="text-center text-info">
-                <h4 *ngIf="!isFocus"><span class="fa fa-lg fa-hand-o-up"></span> Enter your daily exercise data here <span class="fa fa-lg fa-hand-o-up"></span></h4>
+                <h4 *ngIf="!isFocus"><span class="fa fa-lg fa-hand-o-up"></span> Enter today's exercise data here <span class="fa fa-lg fa-hand-o-up"></span></h4>
                 <button *ngIf="isFocus" class="btn btn-outline-info" [attr.disabled]="isDisabled" (click)="inputToday()">Submit</button>
             </caption>
             <thead>
                 <tr class="bg-info text-white">
-                    <th scope="col" width="12%">DATE</th>
+                    <th scope="col" rowspan="2" width="12%" class="align-middle">DATE</th>
                     <th *ngFor="let sport of sports" scope="col" width="12%">{{sport.name | uppercase}}</th>
                     <th scope="col" width="12%">CALORIE</th>
                 </tr>
                 <tr class="bg-info text-white">
-                    <th scope="col" width="12%">UNIT</th>
                     <th *ngFor="let sport of sports" scope="col" width="12%">{{sport.unit | lowercase}}</th>
                     <th scope="col" width="12%">kcal</th>
                 </tr>
@@ -24,20 +23,27 @@
                     <td *ngFor="let sport of work.sports">{{sport.amount}}</td>
                     <td>{{work.cal | number:'1.0-0'}}</td>
                 </tr>
-                <tr class="bg-light">
+                <tr class="bg-info text-white">
                     <th scope="row">{{today | date}}</th>
                     <td *ngFor="let work of workoutToday">
-                        <input class="input-table border-0 text-center" type="text" size="12%" pattern="^[0-9]*$" name="{{work.name}}" [(ngModel)]="work.amount" (input)="onInput()" (focus)="onFocus()">
+                        <input class="input-table border-0 text-center text-white" type="text" size="12%" name="{{work.name}}" [(ngModel)]="work.amount" (input)="onInput()" (focus)="onFocus()">
                     </td>
                     <td>{{sumCal() | number:'1.0-0'}}</td>
                 </tr>
             </tbody>
         </table>
-        <div class="col-1 align-self-end" height="250px"></div>
     </div>
-    <div class="row">
-        <p>Step</p>
-
+    <div *ngIf="barChartData" class="row">
+        <canvas baseChart width="100%" height="40%" class="col-12"
+            [datasets]="barChartData"
+            [labels]="barChartLabels"
+            [options]="barChartOptions"
+            [colors]="barChartColors"
+            [legend]="barChartLegend"
+            [chartType]="barChartType"
+            (chartHover)="chartHovered($event)"
+            (chartClick)="chartClicked($event)">
+        </canvas>
     </div>
     <div class="row">
         <p>Diet</p>
